syntax = "proto3";

service PaxosService {
  rpc Accept (AcceptRequest) returns (AcceptReply);
  rpc Keepalive (KeepaliveRequest) returns (KeepaliveReply);
}

// accept 
message AcceptRequest {
	int32 slot = 1;
	int32 leader = 2;
}

message AcceptReply {
	int32 status = 1;
	int32 leader = 2;
}

// Keepalive
message KeepaliveRequest {
}

message KeepaliveReply {
	int32 status = 1;
}